# ordex

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.config/: nextest.toml
.github/: copilot-instructions.md  pull_request_template.md
.speckit/: constitution.md
docs/: book.toml  features.md
speckit/: constitution.md
src/: app.rs  cache_dirs.rs  cli.rs  clipboard.rs  command.rs  command_completion.rs  config.rs  corresponding_file.rs  cursor.rs  display_columns.rs  editor_state.rs  file_targets.rs  keybindings.rs  main.rs  mode.rs  navigation.rs  path_utils.rs  render.rs  search.rs  session.rs  signal.rs  soft_wrap.rs  spinner.rs  substitute.rs  syntax.rs  temp_paths.rs  text_buffer.rs  toml_like_parser.rs  tui.rs  unsafe_io.rs  viewer.rs  viewport.rs  visible_whitespace.rs
tests/: buffer_management_test.rs  cli_test.rs  clipboard_test.rs  command_input_bindings_test.rs  completion_test.rs  config_include_missing_test.rs  config_keymap_resilience_test.rs  config_loading_test.rs  config_modified_shortcuts_test.rs  config_reload_test.rs  config_test_support.rs  cursor_render_test.rs  editing_test.rs  file_picker_test.rs  goto_line_test.rs  line_number_test.rs  lsp_code_action_test.rs  lsp_completion_responsiveness_test.rs  lsp_completion_test.rs  lsp_diagnostics_responsiveness_test.rs  lsp_diagnostics_test.rs  lsp_external_repro_probe_test.rs  lsp_feedback_heavy_test.rs  lsp_feedback_test.rs  lsp_goto_definition_test.rs  lsp_goto_references_test.rs  lsp_hover_test.rs  lsp_multi_project_test.rs  lsp_multiserver_support_test.rs  lsp_rename_test.rs  (+21 more)
(+310 files in other folders)
