[package]
name = "ordex"
version = "0.1.0"
edition = "2024"

[dependencies]
termion = "4.0.6"
ropey = { version = "2.0.0-beta.1", features = ["metric_chars"] }
libc = "0.2.180"
json = "0.12.4"
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode"] }

[dev-dependencies]
test_utils = { path = "crates/test_utils" }
