[package]
name = "ordex"
version = "0.1.0"
edition = "2024"

[features]
unstable_bench = []

[dependencies]
termion = "4.0.6"
ropey = { version = "2.0.0-beta.1", features = ["metric_chars"] }
libc = "0.2.180"
json = "0.12.4"
regex-cursor = { version = "0.1.5", default-features = false, features = ["perf-inline"] }

[dev-dependencies]
test_utils = { path = "crates/test_utils" }
